[gd_scene load_steps=36 format=3 uid="uid://d0dkocaq2x4ii"]

[ext_resource type="Script" path="res://UI/HUD/hud.gd" id="1_uqtc4"]
[ext_resource type="Texture2D" uid="uid://c17wgknmqwq3j" path="res://Art/UI/HUD/Character Heads/GuyHead.png" id="2_ce6hl"]
[ext_resource type="Texture2D" uid="uid://bf544kp6c4dih" path="res://Art/UI/HUD/Health Bar/healthbarUI.png" id="2_ce33t"]
[ext_resource type="Texture2D" uid="uid://cgdf5us2xsm74" path="res://Art/UI/HUD/Weapons/RocketLauncherReload.png" id="3_4qsvx"]
[ext_resource type="Texture2D" uid="uid://dryfunn51twox" path="res://Art/UI/HUD/Weapons/GrenadeLauncherReload.png" id="5_3wl77"]
[ext_resource type="Theme" uid="uid://lm3kly33wcus" path="res://Art/UI/MenuTheme.tres" id="6_tmlo3"]
[ext_resource type="Texture2D" path="res://Art/Weapons/tilegun.png" id="7_jh8uf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_repi2"]
atlas = ExtResource("3_4qsvx")
region = Rect2(416, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnahv"]
atlas = ExtResource("3_4qsvx")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bokbr"]
atlas = ExtResource("3_4qsvx")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwlbi"]
atlas = ExtResource("3_4qsvx")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsflg"]
atlas = ExtResource("3_4qsvx")
region = Rect2(96, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nvf6"]
atlas = ExtResource("3_4qsvx")
region = Rect2(128, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3sle"]
atlas = ExtResource("3_4qsvx")
region = Rect2(160, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_stgxk"]
atlas = ExtResource("3_4qsvx")
region = Rect2(192, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfq6q"]
atlas = ExtResource("3_4qsvx")
region = Rect2(224, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_861i5"]
atlas = ExtResource("3_4qsvx")
region = Rect2(256, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3e3s"]
atlas = ExtResource("3_4qsvx")
region = Rect2(288, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj8vn"]
atlas = ExtResource("3_4qsvx")
region = Rect2(320, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbbma"]
atlas = ExtResource("3_4qsvx")
region = Rect2(352, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoknr"]
atlas = ExtResource("3_4qsvx")
region = Rect2(384, 0, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fylmb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_repi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnahv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bokbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwlbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsflg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nvf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3sle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stgxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfq6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_861i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3e3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj8vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbbma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoknr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_repi2")
}],
"loop": false,
"name": &"default",
"speed": 19.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fexag"]
atlas = ExtResource("5_3wl77")
region = Rect2(264, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ad3u"]
atlas = ExtResource("5_3wl77")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvohb"]
atlas = ExtResource("5_3wl77")
region = Rect2(24, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdnpe"]
atlas = ExtResource("5_3wl77")
region = Rect2(48, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkxvy"]
atlas = ExtResource("5_3wl77")
region = Rect2(72, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsnea"]
atlas = ExtResource("5_3wl77")
region = Rect2(96, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeo1l"]
atlas = ExtResource("5_3wl77")
region = Rect2(144, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u80ir"]
atlas = ExtResource("5_3wl77")
region = Rect2(168, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty4ri"]
atlas = ExtResource("5_3wl77")
region = Rect2(192, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn0ac"]
atlas = ExtResource("5_3wl77")
region = Rect2(216, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7miq3"]
atlas = ExtResource("5_3wl77")
region = Rect2(240, 0, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6wfp5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fexag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ad3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvohb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdnpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkxvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsnea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeo1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u80ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty4ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn0ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7miq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fexag")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jllrx"]
bg_color = Color(0.156863, 0.156863, 0.156863, 0.654902)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uqtc4")

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(64, 33)
texture = ExtResource("2_ce33t")
hframes = 4

[node name="CharacterHead" type="TextureRect" parent="HealthBar"]
visible = false
offset_left = -72.8553
offset_top = -38.2439
offset_right = -8.85535
offset_bottom = 26.7561
texture = ExtResource("2_ce6hl")

[node name="RocketLauncherReload" type="AnimatedSprite2D" parent="."]
position = Vector2(161.897, 26.8895)
scale = Vector2(1.75641, 1.25921)
sprite_frames = SubResource("SpriteFrames_fylmb")

[node name="GrenadeLauncherReload" type="AnimatedSprite2D" parent="."]
position = Vector2(161.214, 27.8628)
scale = Vector2(1.89887, 1.39215)
sprite_frames = SubResource("SpriteFrames_6wfp5")

[node name="Panel" type="Panel" parent="GrenadeLauncherReload"]
offset_left = 16.0
offset_top = -11.0
offset_right = 45.0
offset_bottom = 8.0
theme = ExtResource("6_tmlo3")
theme_override_styles/panel = SubResource("StyleBoxFlat_jllrx")

[node name="Ammo" type="Label" parent="GrenadeLauncherReload/Panel"]
layout_mode = 0
offset_left = 4.05918
offset_top = -5.83101
offset_right = 30.0592
offset_bottom = 20.169
text = "6"

[node name="Ammo2" type="Label" parent="GrenadeLauncherReload/Panel"]
layout_mode = 0
offset_left = 13.0119
offset_top = -5.83102
offset_right = 39.0119
offset_bottom = 20.169
text = "/6"

[node name="TileGun" type="Sprite2D" parent="."]
position = Vector2(163, 26)
scale = Vector2(1.53387, 1.05923)
texture = ExtResource("7_jh8uf")

[node name="Panel" type="Panel" parent="TileGun"]
offset_left = 19.0
offset_top = -13.0
offset_right = 55.0
offset_bottom = 12.0
theme = ExtResource("6_tmlo3")
theme_override_styles/panel = SubResource("StyleBoxFlat_jllrx")

[node name="Charges" type="Label" parent="TileGun/Panel"]
layout_mode = 0
offset_left = 1.86227
offset_top = -9.65797
offset_right = 23.8623
offset_bottom = 28.342
theme_override_font_sizes/font_size = 48
text = "3"

[node name="Charges2" type="Label" parent="TileGun/Panel"]
layout_mode = 0
offset_left = 12.9453
offset_top = -9.65797
offset_right = 36.9454
offset_bottom = 28.342
theme_override_font_sizes/font_size = 48
text = "/3"
